unpackaged/main/default/objects/Entitlement_Detail__c/Entitlement_Detail__c.object-meta.xml
<CustomObject>
    <description>Used to summarize entitlement details in a screen flow. Does not necessarily have actual records.</description>
    <label>Entitlement Detail</label>
    <nameField>
        <label>Entitlement Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entitlement Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>