unpackaged/main/default/objects/Entitlement_Detail__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <label>Record</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>