unpackaged/main/default/objects/Entitlement_Detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Reciprocal</fullName>
            </value>
            <value>
                <fullName>Reimbursement</fullName>
            </value>
            <value>
                <fullName>Work Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>